<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/stickers"
            android:id="@+id/stickers"
            android:icon="@drawable/stickers_icon"/>

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_flag_checkered"
            android:title="@string/about_us" />
        <item
            android:id="@+id/contacts"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/contacts" />

    </group>

    <item android:title="@string/f1vote_social">
        <menu>

            <item
                android:id="@+id/soc_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter" />
            <item
                android:id="@+id/soc_vk"
                android:icon="@drawable/ic_vk"
                android:title="@string/vk" />
        </menu>
    </item>

</menu>
