<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingTop="16dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/poll_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="-30dp"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:letterSpacing="0.05"
        android:textStyle="bold"
        android:text="@string/poll_text"
        android:background="@drawable/rounded_corners" />

    <TextView
        android:id="@+id/poll_caption_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="-32dp"
        android:textColor="#fff"
        android:textSize="16sp"
        android:letterSpacing="0.05"
        android:textStyle="bold"
        android:text="@string/partners"
        android:background="@drawable/rounded_corners_green" />

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/title"
        android:maxLines="4"
        android:lineSpacingExtra="-3dp"
        android:textColor="@color/black"
        android:textSize="17sp">
    </TextView>

    <TextView
        android:id="@+id/poll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corners_button"
        android:gravity="start"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:text="@string/vote_button"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical|start"
        android:text="@string/date"
        android:textColor="@color/grey"
        android:textSize="12sp">
    </TextView>

</LinearLayout>